--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <div id="digitalClock">
             <div id="time" aria-live="polite"></div>
             <div id="period"></div>
+            <div id="date"></div>
         </div>
 
         <div id="analogClock" class="hidden">
