--- a/index.html
+++ b/index.html
@@ -3,28 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Enhanced Analog & Digital Clock</title>
+    <title>Professional Clock</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <div class="container">
-        <h1>Clock</h1>
+        <h1>Professional Clock</h1>
 
+        <!-- Controls -->
         <div class="controls">
             <div class="buttons">
-                <button id="digitalBtn" class="control-btn active" aria-label="Show digital clock">Digital</button>
-                <button id="analogBtn" class="control-btn" aria-label="Show analog clock">Analog</button>
-                <button id="formatToggle" class="control-btn" aria-label="Toggle time format">12H/24H</button>
+                <button id="digitalBtn" class="control-btn active" aria-label="Show digital clock">
+                    <i class="fas fa-clock"></i> Digital
+                </button>
+                <button id="analogBtn" class="control-btn" aria-label="Show analog clock">
+                    <i class="fas fa-stopwatch"></i> Analog
+                </button>
+                <button id="formatToggle" class="control-btn" aria-label="Toggle time format">
+                    <i class="fas fa-exchange-alt"></i> 12H/24H
+                </button>
+                <button id="themeToggle" class="control-btn" aria-label="Toggle theme">
+                    <i class="fas fa-palette"></i> Theme
+                </button>
+                <button id="fullscreenBtn" class="control-btn" aria-label="Toggle fullscreen">
+                    <i class="fas fa-expand"></i> Fullscreen
+                </button>
             </div>
-            <button id="themeToggle" class="control-btn theme-btn" aria-label="Toggle dark mode">Dark Mode</button>
         </div>
 
+        <!-- Digital Clock -->
         <div id="digitalClock">
             <div id="time" aria-live="polite"></div>
             <div id="period"></div>
             <div id="date"></div>
         </div>
 
+        <!-- Analog Clock -->
         <div id="analogClock" class="hidden">
             <div class="clock-face">
                 <div class="numbers"></div>
@@ -34,7 +49,26 @@
                 <div class="center-dot"></div>
             </div>
         </div>
+
+        <!-- Stopwatch & Timer -->
+        <div id="stopwatchTimer" class="hidden">
+            <div id="stopwatch">
+                <div id="stopwatchDisplay">00:00:00</div>
+                <button id="startStopwatch">Start</button>
+                <button id="resetStopwatch">Reset</button>
+            </div>
+            <div id="timer">
+                <div id="timerDisplay">00:00:00</div>
+                <input type="number" id="timerInput" placeholder="Set Timer (seconds)">
+                <button id="startTimer">Start</button>
+                <button id="resetTimer">Reset</button>
+            </div>
+        </div>
     </div>
+
+    <!-- Sound Effects -->
+    <audio id="clickSound" src="click.mp3"></audio>
+    <audio id="tickSound" src="tick.mp3"></audio>
 
     <script src="script.js"></script>
 </body>
